cập nhật chân và tắt các ngoại vi wifi bluetooh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "algorithm": "cpp"
     }
 }
